--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,7 +13,7 @@
 @import url("base/gabarit.css");
 
 
-/* componants */
+/* components */
 @import url("components/article.css");
 @import url("components/tweet.css");
 @import url("components/menu.css");
