--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,6 +20,7 @@
 @import url("components/gallerie.css");
 @import url("components/apropos.css");
 @import url("components/carrousel.css");
+@import url("components/nouscontacter.css");
 
 /* layout */
 @import url("layout/header.css");
